2003-03-01  Peter Williams  <peterw@ximian.com>

	* glue/Makefile.am (libgtksharpglue_la_LIBADD): Change this to
	BASE_DEPENDENCIES_LIBS

2003-03-01  Mike Kestner  <mkestner@speakeasy.net>

	* api/gdk-api.xml : make Color.Parse retval a gboolean. Also change
	some libname override rules to use win32 dllnames.
	* sources/Gdk.metadata : rules for above.

2003-02-28  Miguel de Icaza  <miguel@ximian.com>

	* glue/widget.c (gtksharp_gtk_widget_get_window): Fix.  Return the
	window, not the address of the window pointer.

2003-02-28  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* generator/SignalHandler.cs: the generated Dispose method now calls
	base.Dispose and always disconnects the handler. Thanks to
	Petr Danecek <danecek@ucl.cas.cz>.

2003-02-28  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* api/gdk-api.xml:
	* sources/Gdk.metadata: hide GdkColormap.AllocColor.

	* gdk/Colormap.custom: AllocColor is here.

	* gconf/tools/schemagen.cs: XmlDocument.Load (string) takes an Uri.

2003-02-28  Miguel de Icaza  <miguel@ximian.com>

	* gdk/Color.custom: Added constructors from System.Drawing.Color
	and from rgb byte tuples. 

	* gdk/Colormap.custom: Add new .custom file for the AllocColor
	call. 

	* sources/Gdk.metadata: Make Colormap.AllocColor GdkColor
	parameter be a `ref' parameter.

2003-02-27  Miguel de Icaza  <miguel@ximian.com>

	* gdk/Drawable.custom: Added nice overload for DrawRectangle. 

2003-02-19  Miguel de Icaza  <miguel@ximian.com>

	* gdk/Pixbuf.custom: Add overload arguments that take a
	System.Drawing.Color.

	Added a Clone() method, to implement the ICloneable interface.

	Added constructors for inlined in-data RGB/RGBA buffers and file
	images. 

2003-02-26  Charles Iliya Krempeaux  <charles@reptile.ca>

 	* gtk/TextBuffer.custom : Added method, named
 	  "GetIterAtOffset" to wrap C API procedure
 	  "gtk_text_buffer_get_iter_at_offset" in a
 	  more expected way.
 
2003-02-26  Charles Iliya Krempeaux <charles@reptile.ca>
