@@ -1,3 +1,7 @@
+2003-03-02  Miguel de Icaza  <miguel@ximian.com>
+
+	* glib/Markup.cs: Add new file.
+
 2003-03-01  Peter Williams  <peterw@ximian.com>
 
 	* glue/Makefile.am (libgtksharpglue_la_LIBADD): Change this to
